src/test/ui/never_type/call-fn-never-arg-wrong-type.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/call-fn-never-arg-wrong-type.rs:10:5
   |
LL |     foo("wow");
   |     ^^^^-----^
   |         |
   |         expected `!`, found `&'static str`
   |
note: function defined here
  --> $DIR/call-fn-never-arg-wrong-type.rs:5:4
   |
LL | fn foo(x: !) -> ! {
   |    ^^^ ----
help: provide an argument of the correct type
   |
LL |     foo({!});
   |     ^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
